--- a/wpf-winthino/App.xaml
+++ b/wpf-winthino/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:wpf_winthino"
-             StartupUri="MainWindow.xaml">
+             StartupUri="main.xaml">
     <Application.Resources>
          
     </Application.Resources>
