主界面样式基本完成

--- a/wpf-winthino/main.xaml
+++ b/wpf-winthino/main.xaml
@@ -11,18 +11,68 @@
             <Grid Height="290" Width="340" VerticalAlignment="Top" x:Name="grtext">
                 <StackPanel HorizontalAlignment="Center">
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="Win Thino" FontSize="25" Margin="0,5,0,1"/>
-                        <Button Width="20" Height=" 20" Background="Transparent" Content="—" BorderThickness="0" Margin="160,0,0,0" Click="Button_Click_1"/>
-                        <Button Width="20" Height=" 20" Background="Transparent" Content="X" BorderThickness="0" Margin="10,0" Click="Button_Click"/>
+                        <TextBlock Text=" Win Thino" FontSize="25" Margin="0,5,0,1"/>
+                        <Button Width="20" Height=" 20" Background="Transparent" Content="—" BorderThickness="0" Margin="155,-2,0,0" Click="Button_Click_1"/>
+                        <Button Width="20" Height=" 20" Background="Transparent" Content="X" BorderThickness="0" Margin="8,0" Click="Button_Click"/>
                     </StackPanel>
                     
                     <RichTextBox Height="240" Width="330" BorderBrush="Black" BorderThickness="2"/>
                 </StackPanel>
             </Grid>
 
-            <Grid Width="280" Height="60" HorizontalAlignment="Left" Margin="5,5" VerticalAlignment="Bottom" x:Name="grbom">
-                <Border BorderThickness="2" BorderBrush="Black" Height="60" Width="270">
+            <Grid Width="280" Height="65" HorizontalAlignment="Left" Margin="5,5" VerticalAlignment="Bottom" x:Name="grbom">
+                <Border BorderThickness="0" BorderBrush="Black" Height="65" Width="270">
+                    <Grid>
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="0,2,0,0" >
+                            <Button Height="30" Background="Transparent" Width="30" BorderThickness="0">
+                                <Image Source="/image/粗体.png" Height="25"/>
+                            </Button>
+                            <Button Height="30" Background="Transparent" Width="30" BorderThickness="0">
+                                <Image Source="/image/斜体.png" Height="28" />
+                            </Button>
+                            <Button Height="30" Background="Transparent" Width="30" BorderThickness="0">
+                                <Image Source="/image/删除线.png" Height="30" />
+                            </Button>
+                            <Button Height="30" Background="Transparent" Width="30" BorderThickness="0">
+                                <Image Source="/image/高亮.png"  Height="25" Margin="0,3,0,0"/>
+                            </Button>
 
+                            <Button Height="30" Background="Transparent" Width="30" BorderThickness="0" Margin="60,0,0,0">
+                                <Image Source="/image/复制.png" Height="25" />
+                            </Button>
+                            <Button Height="30" Background="Transparent" Width="30" BorderThickness="0" >
+                                <Image Source="/image/粘贴.png" Height="20"/>
+                            </Button>
+                            <Button Height="30" Background="Transparent" Width="30" BorderThickness="0" >
+                                <Image Source="/image/剪切.png" Height="25"/>
+                            </Button>
+                        </StackPanel>
+                        
+                        
+                        <Border Width="270" Height=" 1" Background="Black" />
+
+
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" >
+                            <CheckBox Height="15" Width="15" BorderBrush="Black" Margin="5,0,5,0"/>
+                            <ComboBox Width="38" Height="20">
+                                <ComboBoxItem Content="D AILY"/>
+                                <ComboBoxItem Content="M ULTI"/>
+                                <ComboBoxItem Content="F ILE"/>
+                                <ComboBoxItem Content="C ANVAS"/>
+                            </ComboBox>
+                            <Button Height="30" Background="Transparent" Width="30" BorderThickness="0" >
+                                <Image Source="/image/上传图片.png"  Height=" 22"/>
+                            </Button>
+
+                            <Button Height="30" Background="Transparent" Width="30" BorderThickness="0" Margin="112,0,0,0" >
+                                <Image Source="/image/日历.png" Height="22"/>
+                            </Button>
+                            <Button Height="30" Background="Transparent" Width="30" BorderThickness="0" >
+                                <Image Source="/image/设置.png" Height="25"/>
+                            </Button>
+
+                        </StackPanel>
+                    </Grid>
                 </Border>
             </Grid>
   
