--- a/wpf-winthino/App.xaml
+++ b/wpf-winthino/App.xaml
@@ -4,6 +4,21 @@
              xmlns:local="clr-namespace:wpf_winthino"
              StartupUri="main.xaml">
     <Application.Resources>
-         
+        
+        
+        
+        
+        
+        <Style TargetType="CheckBox">
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="LayoutTransform">
+                <Setter.Value>
+                    <ScaleTransform ScaleX="1.3" ScaleY="1.4" />
+                </Setter.Value>
+            </Setter>
+        </Style>
+        
+        
+        
     </Application.Resources>
 </Application>
