--- a/wpf-winthino/main.xaml
+++ b/wpf-winthino/main.xaml
@@ -15,13 +15,7 @@
                         <Button Width="20" Height=" 20" Background="Transparent" Content="—" BorderThickness="0" Margin="155,-2,0,0" Click="Button_Click_1"/>
                         <Button Width="20" Height=" 20" Background="Transparent" Content="X" BorderThickness="0" Margin="8,0" Click="Button_Click"/>
                     </StackPanel>
-                    <RichTextBox Height="240" Width="330" BorderBrush="Black" BorderThickness="2"  x:Name="rich">
-                        <RichTextBox.Resources>
-                            <Style TargetType="{x:Type Paragraph}">
-                                <Setter Property="LineHeight" Value="1"/>
-                            </Style>
-                        </RichTextBox.Resources>
-                    </RichTextBox>
+                    <RichTextBox Height="240" Width="330" BorderBrush="Black" BorderThickness="2"  x:Name="rich"/>
                 </StackPanel>
             </Grid>
 
@@ -41,19 +35,10 @@
                             <Button Height="30" Background="Transparent" Width="30" BorderThickness="0" Click="Button_Click_5">
                                 <Image Source="/image/高亮.png"  Height="25" Margin="0,3,0,0"/>
                             </Button>
-                            <Button Height="30" Background="Transparent" Width="30" BorderThickness="0" Click="Button_Click_9" >
-                                <Image Source="/image/分割线.png" Height="20"/>
-                            </Button>
+                            <Button Height="30" Background="Transparent" Width="30" BorderThickness="0" Click="Button_Click_9" />
+                            
+                            <DatePicker Height="25" Background="Transparent" Width="30" BorderThickness="0" Margin="80,5,0,0" x:Name="date" SelectedDateChanged="date_SelectedDateChanged"/>
 
-                            <Button Height="30" Background="Transparent" Width="30" BorderThickness="0" Margin="28,0,0,0" Click="Button_Click_6">
-                                <Image Source="/image/复制.png" Height="25" />
-                            </Button>
-                            <Button Height="30" Background="Transparent" Width="30" BorderThickness="0" Click="Button_Click_7" >
-                                <Image Source="/image/粘贴-F.png" Height="18" Margin="0,1,0,0"/>
-                            </Button>
-                            <Button Height="30" Background="Transparent" Width="30" BorderThickness="0" Click="Button_Click_8" >
-                                <Image Source="/image/剪切.png" Height="25"/>
-                            </Button>
                         </StackPanel>
 
 
@@ -62,7 +47,7 @@
 
                         <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" >
                             <CheckBox Height="15" Width="15" BorderBrush="Black" Margin="5,0,10,0" Background="White"/>
-                            <ComboBox Width="38" Height="20" BorderBrush="White" Background="Black" SelectedIndex="0" Margin="0,0,5,0">
+                            <ComboBox Width="70" Height="20" BorderBrush="White" Background="Black" SelectedIndex="0" Margin="0,0,5,0">
                                 <ComboBoxItem Content="DAILY"/>
                                 <ComboBoxItem Content="MULTI"/>
                                 <ComboBoxItem Content="FILE"/>
@@ -72,8 +57,8 @@
                                 <Image Source="/image/上传图片.png"  Height=" 22"/>
                             </Button>
 
-                            <DatePicker Height="21" Background="Transparent" Width="30" BorderThickness="0" Margin="102,0,0,0" x:Name="date" SelectedDateChanged="date_SelectedDateChanged"/>
-                            <Button Height="30" Background="Transparent" Width="30" BorderThickness="0" x:Name="setb" Click="setb_Click" >
+
+                            <Button Height="30" Background="Transparent" Width="30" BorderThickness="0" x:Name="setb" Click="setb_Click" Margin="91,0,0,0" >
                                 <Image Source="/image/设置.png" Height="25"/>
                             </Button>
 
