--- a/wpf-winthino/main.xaml
+++ b/wpf-winthino/main.xaml
@@ -8,6 +8,8 @@
         Icon="/image/013112574164_0纸飞机,折纸,发送.ico" 
         Title="main" Height="350" Width="350" WindowStyle="None" AllowsTransparency="True" ResizeMode="CanResize" Background="Transparent" x:Name="mainf"  MouseLeftButtonDown="mainf_MouseLeftButtonDown" Loaded="mainf_Loaded">
 
+
+    
     <Window.Resources>
         <Style x:Key="ToolTipBox" TargetType="ToolTip">
             <Setter Property="Foreground" Value="White" />
@@ -62,10 +64,10 @@
                         <Button Width="20" Height=" 20" Background="Transparent" Content="X" BorderThickness="0" Margin="8,0" Click="Button_Click"/>
                     </StackPanel>
                     <RichTextBox Height="240" Width="330" BorderBrush="Black" BorderThickness="2"  x:Name="rich" PreviewMouseLeftButtonDown="rich_PreviewMouseLeftButtonDown">
-                        <FlowDocument>
-                            <Paragraph LineHeight="1.5">
-                            </Paragraph>
-                        </FlowDocument>
+                        <RichTextBox.Document>
+                            <FlowDocument Focusable="True" LineHeight="1">
+                            </FlowDocument>
+                        </RichTextBox.Document>
                     </RichTextBox>
                 </StackPanel>
             </Grid>
