--- a/wpf-winthino/main.xaml
+++ b/wpf-winthino/main.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:wpf_winthino"
         mc:Ignorable="d"
-        Icon="/image/013112574164_0纸飞机,折纸,发送.ico" 
+        Icon="/image/013115302283_0纸飞机,折纸,发送 (1).ico" 
         Title="main" Height="350" Width="350" WindowStyle="None" AllowsTransparency="True" ResizeMode="CanResize" Background="Transparent" x:Name="mainf"  MouseLeftButtonDown="mainf_MouseLeftButtonDown" Loaded="mainf_Loaded">
 
 
