--- a/wpf-winthino/main.xaml
+++ b/wpf-winthino/main.xaml
@@ -11,6 +11,30 @@
 
 
     <Window.Resources>
+
+        <Style TargetType="{x:Type RichTextBox}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type RichTextBox}">
+                        <Border x:Name="Border" 
+                                BorderBrush="{TemplateBinding BorderBrush}" 
+                                BorderThickness="{TemplateBinding BorderThickness}"
+                                Background="{TemplateBinding Background}">
+                            <ScrollViewer x:Name="PART_ContentHost"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsKeyboardFocused" Value="True">
+                                <Setter TargetName="Border" Property="BorderBrush" Value="black"/>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="Border" Property="BorderBrush" Value="black"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
         <Style x:Key="ToolTipBox" TargetType="ToolTip">
             <Setter Property="Foreground" Value="White" />
             <Setter Property="Placement" Value="Center" />
@@ -54,16 +78,16 @@
 
 
 
-    <Border Background="White" CornerRadius="15" x:Name="bor" >
+    <Border Background="#ffffef" CornerRadius="15" x:Name="bor" >
         <Grid>
-            <Grid Height="290" Width="340" VerticalAlignment="Top" x:Name="grtext">
+            <Grid Height="220" Width="340" VerticalAlignment="Top" x:Name="grtext" Margin="5,0,5,0">
                 <StackPanel HorizontalAlignment="Center">
                     <StackPanel Orientation="Horizontal" Height="31">
                         <TextBlock Text=" Win Thino" FontSize="24"/>
                         <Button Width="20" Height=" 20" Background="Transparent" Content="—" BorderThickness="0" Margin="155,-2,0,0" Click="Button_Click_1"/>
                         <Button Width="20" Height=" 20" Background="Transparent" Content="X" BorderThickness="0" Margin="8,0" Click="Button_Click"/>
                     </StackPanel>
-                    <RichTextBox Height="119" Width="330" BorderBrush="Black" BorderThickness="2"  x:Name="rich" PreviewMouseLeftButtonDown="rich_PreviewMouseLeftButtonDown">
+                    <RichTextBox Height="119" Width="330" BorderBrush="Black" BorderThickness="2"  x:Name="rich" PreviewMouseLeftButtonDown="rich_PreviewMouseLeftButtonDown" Background="#FFFFFFF8" SelectionBrush="Black" FontSize="13" PreviewMouseMove="rich_PreviewMouseMove" >
                         <RichTextBox.Document>
                             <FlowDocument Focusable="True" LineHeight="1">
                             </FlowDocument>
@@ -144,7 +168,7 @@
             </Grid>
 
 
-            <Border Background="White" Height="70" Width="70" Grid.Column="1" CornerRadius="15" HorizontalAlignment="Right" VerticalAlignment="Bottom" >
+            <Border Background="#ffffef" Height="70" Width="70" Grid.Column="1" CornerRadius="15" HorizontalAlignment="Right" VerticalAlignment="Bottom" >
                 <Button x:Name="but" Click="but_Click" Background="Transparent" BorderThickness="0" Height="52" Width="52" MouseLeftButtonDown="but_MouseLeftButtonDown" MouseEnter="but_MouseEnter" MouseLeave="but_MouseLeave"  >
                     <Border CornerRadius="15" BorderThickness="2" BorderBrush="Black" Height="50" Width="50" x:Name="fsb" >
                         <TextBlock Text="发射" HorizontalAlignment="Center" VerticalAlignment="Center" x:Name="textb"/>
